js/js.translator/testData/incremental/invalidation/inlineFunSameLibRemoveFunctions/lib1/l1.1.kt
inline fun plusOne(x: Int): Int = x + 1
